# vinum

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  signal.rs
src/signal/: filter.rs
src/signal/filter/: design.rs
